# forge

./: .gitmodules  Cargo.toml  README.md  clickhouse.sh  compose.yml  flake.nix  justfile  shell.nix
.github/workflows/: clippy.yml
src/: main.rs
src/logs/: logs.rs
src/webhook/: mod.rs  webhook.rs
